Closed Bug 547316 Opened 14 years ago Closed 14 years ago

###!!! ASSERTION: Subclass was not reset correctly before the dtor was reached! with Move Player and dragging a tab

Categories

(Core Graveyard :: Plug-ins, defect)

x86
Windows NT
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: benjamin, Assigned: benjamin)

References

Details

Attachments

(1 file)

Setup:
* Windows.
* install Move Player from http://www.movenetworks.com/install-move-player You will need to spoof your useragent to be Firefox instead of Minefield

Steps:
* Visit http://www.movenetworks.com/why-move/the-quality-difference
* Open a new tab
* Switch back to the movie tab and drag it onto itself to detach it from the current window

The child will have pldhash asserts I'm tracking in a different bug.

The parent asserts with this stack:

NS_DebugBreak_P(aSeverity=0x00000001, aStr=0x6bcb20d4, aExpr=0x6bcb1fbc, aFile=0x6bcb2070, aLine=0x00000055)
mozilla::plugins::PluginInstanceParent::~PluginInstanceParent()
mozilla::plugins::PluginInstanceParent::`scalar deleting destructor'()
mozilla::plugins::PluginModuleParent::DeallocPPluginInstance(aActor=0x0bad8448)
mozilla::plugins::PPluginModuleParent::RemoveManagee(aProtocolId=0x00000001, aListener=0x0bad8448)
mozilla::plugins::PPluginInstanceParent::Call__delete__(actor=0x0bad8448)
mozilla::plugins::PluginModuleParent::NPP_Destroy(instance=0x0b9a1fe8, __formal=0x0042d02c)
nsNPAPIPluginInstance::Stop()
DoStopPlugin(aInstanceOwner=0x0bc12720, aDelayedStop=0x00000000)
nsStopPluginRunnable::Run()
nsThread::ProcessNextEvent(mayWait=0x00000000, result=0x0042d11c)
NS_ProcessNextEvent_P(thread=0x0073cae8, mayWait=0x00000000)
mozilla::ipc::MessagePump::Run(aDelegate=0x0073ab70)
MessageLoop::RunInternal()
MessageLoop::RunHandler()
MessageLoop::Run()
nsBaseAppShell::Run()
nsAppShell::Run()
nsAppStartup::Run()
XRE_main(argc=0x00000004, argv=0x00727df0, aAppData=0x00728ff8)

mPluginHWND = 0x00550536
mPluginWndProc = 0x6aca5d60
Assignee: nobody → benjamin
Status: NEW → ASSIGNED
Attachment #427851 - Flags: review?(bent.mozilla)
Attachment #427851 - Flags: review?(bent.mozilla) → review+
OS: Linux → Windows NT
landed feb 19 - http://hg.mozilla.org/mozilla-central/rev/60a7d2dc47f2
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: