Bug 547316 - Plugin window subclass is not reset when CallNPP_Destroy fails, r=bent